# rtt_env

./: .gitignore  README.md  pyproject.toml
env/: __init__.py  __main__.py  main.py
env/pkgs/: cmd_package_update.py  cmd_package_utils.py  command.py  package.py  pkgs.py  repo.py
env/utils/: KTemplate.py  archive.py  kconfig.py  pkgsdb.py  settings.py  vars.py
tests/: test_env.py
