[tool.poetry]
name = "env"
version = "0.1.4"
description = "Command line tool to assist RT-Thread development"
authors = ["shinu <shinu_61@163.com>"]
readme = "README.md"

[tool.poetry.scripts]
rtt = "env.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
requests = "^2.27.1"
kconfiglib = "^14.1.0"
SCons = "^4.3.0"
click-spinner = "^0.1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
